<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_topup"
        android:icon="@drawable/ic_topup"
        android:title="@string/nav_topup" />
    <item
        android:id="@+id/nav_tool"
        android:icon="@drawable/ic_tool"
        android:title="@string/nav_tool" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />
    <item
        android:id="@+id/nav_admin"
        android:icon="@drawable/ic_bug"
        android:title="@string/nav_admin"
        android:visible="false" />
</menu>
